--- a/src/main/resources/templates/catalogos/formmovactivo.html
+++ b/src/main/resources/templates/catalogos/formmovactivo.html
@@ -8,7 +8,7 @@
       <div class="card">
          <div class="card-header bg-light text-primary font-weight-bold" th:text="${titulo}"></div>
          <div class="card-body">
-            <form id="form1" th:action="@{/movactivos/form}" th:object="${movactivo}" method="post">
+            <form id="form" th:action="@{/movactivos/form}" th:object="${movactivo}" method="post">
             
                <div class="form-group row">
                   <h5 class="mx-3 col-2"><label class="col-form-label">Fecha</label></h5>
