--- a/src/main/resources/templates/layout/autocompleteMov.html
+++ b/src/main/resources/templates/layout/autocompleteMov.html
@@ -52,6 +52,10 @@
    var itemHelper={
 		   eliminaLinea:function(id){
 			   $("#row_"+id).remove();
+		   },
+		   enviarForm: function(){
+			   $('#tabla1').remove();
+			   $('form').submit();			   
 		   }
    }
     </script>
