--- a/src/main/resources/templates/layout/btnform.html
+++ b/src/main/resources/templates/layout/btnform.html
@@ -6,6 +6,12 @@
       <a class="btn btn-sm btn-primary" href="#" onclick="this.parentNode.parentNode.submit();"><i class="fas fa-save"></i> Guardar</a> 
       <a class="btn btn-sm btn-danger" th:href="${obj}+ @{'/listado'}"><i class="fas fa-ban"></i> Cancelar</a>
    </div>
+   
+   <!--  BOTONES GUARDAR-CANCELAR ------------------------------------------------------------------ -->
+   <div th:fragment="botonesSin (obj)">
+      <a class="btn btn-sm btn-primary" href="#" onclick="itemHelper.enviarForm();"><i class="fas fa-save"></i> Guardar</a> 
+      <a class="btn btn-sm btn-danger" th:href="${obj}+ @{'/listado'}"><i class="fas fa-ban"></i> Cancelar</a>
+   </div>
 
    <!--  BOTONES GUARDAR-CANCELAR ------------------------------------------------------------------ -->
    <div th:fragment="botonesv2 (obj)">
@@ -19,8 +25,7 @@
             <div class="btn btn-sm btn-danger">
                <i class="fas fa-ban"></i>
                <a class="btn btn-sm btn-danger" th:href="${obj}+ @{'/listado'}"> Cancelar</a>
-            </div>
-            
+            </div>            
             
          </div>
       </div>
@@ -59,6 +64,16 @@
          title="Visualizar Evidencia" target="blank"><i class="fas fa-eye"></i></a>
       <a class="btn btn-danger btn-sm" th:href="${url}+@{/eliminar/}+${obj.id}" onclick="return confirm('Estas seguro de eliminar registro?');" 
       	 data-toggle="tooltip" data-placement="top" title="Borrar Registro"><i class="far fa-trash-alt"></i></a>
+   </div>
+   
+   <!--  BOTONES DE ACCION SINIESTROS---------------------------------------------------------------------------- -->
+   <div th:fragment="accionesSin (url,obj)">
+      <a class="btn btn-primary btn-sm" th:href="${url}+@{/form/}+${obj.id}" data-toggle="tooltip" data-placement="top"
+         title="Editar Registro"><i class="far fa-edit"></i></a> 
+      <a class="btn btn-secondary btn-sm" th:href="${url}+@{/anexar/}+${obj.id}" data-toggle="tooltip" data-placement="top"
+         title="Anexar Evidencia"><i class="fas fa-upload"></i></a>
+      <a class="btn btn-danger btn-sm" th:href="${url}+@{/eliminar/}+${obj.id}" onclick="return confirm('Estas seguro de eliminar registro?');" 
+          data-toggle="tooltip" data-placement="top" title="Borrar Registro"><i class="far fa-trash-alt"></i></a>
          
         
    </div>
