--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sd="http://www.thymeleaf.org/spring-data">
 <head>
-<meta charset="UTF-8">
-<title th:text="'CarpetaTIv3: '+${titulo}"></title>
-
-<link rel="stylesheet" th:href="@{/css/jquery-ui.css}" />
-<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-<link rel="stylesheet" th:href="@{/css/all.min.css}">
-<!-- SCRIPTS DE LA PAGINA.......................................................... -->
-<script th:src="@{/js/jquery-3.2.1.js}"></script>
-<script th:src="@{/js/popper.min.js}"></script>
-<script th:src="@{/js/bootstrap.min.js}"></script>
-<script th:src="@{/js/otros.js}"></script>
-<script th:src="@{/js/jquery-ui.js}"></script>
-
-
+   <meta charset="UTF-8">
+   <title th:text="'CarpetaTIv3: '+${titulo}"></title>
+   <!-- CSS DE LA PAGINA.......................................................... -->
+      <link rel="stylesheet" th:href="@{/css/jquery-ui.css}" />
+      <link rel="stylesheet" th:href="@{/css/bootstrap_cerulean.min.css}" />
+      <link rel="stylesheet" th:href="@{/css/all.min.css}">
+   <!-- SCRIPTS DE LA PAGINA.......................................................... -->
+      <script th:src="@{/js/jquery-3.2.1.js}"></script>
+      <script th:src="@{/js/popper.min.js}"></script>
+      <script th:src="@{/js/bootstrap.min.js}"></script>
+      <script th:src="@{/js/otros.js}"></script>
+      <script th:src="@{/js/jquery-ui.js}"></script>
 </head>
 <body>
    <header>
       <!--  BARRA DE MENUS DE NAVEGACION............................................ -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
          <img th:src="@{/images/pepsi.png}" width="30" height="40" alt="">
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,24 +31,25 @@
                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" id="navbarDropdown1">Bitacoras</a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                    <a class="dropdown-item" th:href="@{/reparaciones/listado}">Reparaciones</a>
-                    <a class="dropdown-item" th:href="@{/movactivos/listado}">Mov. de Activos</a>
+                    <a class="dropdown-item" th:href="@{/reparaciones/listado}"><i class="fas fa-hammer"></i> Reparaciones</a>
+                    <a class="dropdown-item" th:href="@{/movactivos/listado}"><i class="fas fa-book"></i> Mov de Activos</a>
+                    <a class="dropdown-item" th:href="@{/siniestros/listado}"><i class="fas fa-biohazard"></i> Siniestros</a>
                   </div>   
                </li>
 
                <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Catalogos </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item dropdown-toggle" href="#">Otros</a>
+                     <a class="dropdown-item dropdown-toggle" href="#"> <i class="fas fa-folder"></i> Otros</a>
                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/devices/listado}">Dispositivos</a></li>
-                        <li><a class="dropdown-item" th:href="@{/marcas/listado}">Marcas</a></li>
-                        <li><a class="dropdown-item" th:href="@{/modelos/listado}">Modelos</a></li>
-                        <li><a class="dropdown-item" th:href="@{/cedis/listado}">Cedis</a></li>
-                        <li><a class="dropdown-item" th:href="@{/puestos/listado}">Puestos</a></li>
-                        <li><a class="dropdown-item" th:href="@{/status/listado}">Status</a></li>
-                        <li><a class="dropdown-item" th:href="@{/tiposproblemas/listado}">Tipos de Daño</a></li>
-                        <li><a class="dropdown-item" th:href="@{/tiposiniestros/listado}">Tipos de Siniestros</a></li>
+                        <li><a class="dropdown-item" th:href="@{/devices/listado}"><i class="fas fa-microchip"></i> Dispositivos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/marcas/listado}"><i class="fas fa-boxes"></i> Marcas</a></li>
+                        <li><a class="dropdown-item" th:href="@{/modelos/listado}"><i class="fas fa-cube"></i> Modelos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/cedis/listado}"><i class="fas fa-building"></i> Cedis</a></li>
+                        <li><a class="dropdown-item" th:href="@{/puestos/listado}"><i class="fas fa-diagnoses"></i> Puestos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/status/listado}"><i class="fas fa-clipboard-check"></i> Status</a></li>
+                        <li><a class="dropdown-item" th:href="@{/tiposproblemas/listado}"><i class="fas fa-first-aid"></i> Tipos de Daño</a></li>
+                        <li><a class="dropdown-item" th:href="@{/tiposiniestros/listado}"><i class="fas fa-cart-plus"></i> Tipos de Siniestros</a></li>
 
                         <!--  <li><a class="dropdown-item dropdown-toggle" href="#">Subsubmenu</a>
                            <ul class="dropdown-menu">
@@ -60,8 +59,8 @@
                      </ul>
 
                      <div class="dropdown-divider"></div>
-                     <a class="dropdown-item" th:href="@{/empleados/listado}">Empleados</a> <a class="dropdown-item"
-                        th:href="@{/equipos/listado}">Equipos</a>
+                     <a class="dropdown-item" th:href="@{/empleados/listado}"><i class="fas fa-address-book"></i> Empleados</a> <a class="dropdown-item"
+                        th:href="@{/equipos/listado}"><i class="fas fa-desktop"></i> Equipos</a>
                   </div>
                </li>
                <li class="nav-item"><a class="nav-link disabled" href="#">Reportes</a></li>
